crates/aranya-policy-lang/tests/data/command_without_policy_block.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Syntax error
  |
9 | }
  | ^ expected policy_block
